# osg-and-osgearth

./: .gitignore  readme.md
data/hongkang/: Data.osgb  metadata.xml
data/hongkang/Data/Model/: Model.osgb  Model_with_transform.osgb  tile_0_0_0_tex_children.osgb  tile_1_0_0_tex_children.osgb  tile_1_0_16_tex_children.osgb  tile_1_16_0_tex_children.osgb  tile_1_16_16_tex_children.osgb  tile_2_0_0_tex_children.osgb  tile_2_0_16_tex_children.osgb  tile_2_0_24_tex_children.osgb  tile_2_0_8_tex_children.osgb  tile_2_16_0_tex_children.osgb  tile_2_16_16_tex_children.osgb  tile_2_16_24_tex_children.osgb  tile_2_16_8_tex_children.osgb  tile_2_24_0_tex_children.osgb  tile_2_24_16_tex_children.osgb  tile_2_24_24_tex_children.osgb  tile_2_24_8_tex_children.osgb  tile_2_8_0_tex_children.osgb  tile_2_8_16_tex_children.osgb  tile_2_8_24_tex_children.osgb  tile_2_8_8_tex_children.osgb  tile_3_0_0_tex_children.osgb  tile_3_0_12_tex_children.osgb  tile_3_0_16_tex_children.osgb  tile_3_0_20_tex_children.osgb  tile_3_0_24_tex_children.osgb  tile_3_0_28_tex_children.osgb  tile_3_0_4_tex_children.osgb  tile_3_0_8_tex_children.osgb  tile_3_12_0_tex_children.osgb  tile_3_12_12_tex_children.osgb  tile_3_12_16_tex_children.osgb  tile_3_12_20_tex_children.osgb  tile_3_12_24_tex_children.osgb  tile_3_12_28_tex_children.osgb  tile_3_12_4_tex_children.osgb  tile_3_12_8_tex_children.osgb  (+304 more)
learn_osg_01/: CMakeLists.txt  main.cpp  readme.md
learn_osg_02/: CMakeLists.txt  main.cpp  readme.md
learn_osg_03/: CMakeLists.txt  main.cpp  readme.md
learn_osg_04/: CMakeLists.txt  main.cpp  readme.md
